# anki-connect-api

./: .gitignore  README.md  README.python.md  anki_connect.header.md  anki_connect.py  anki_connect.python.md  anki_connect_api.py  make_doc.py  pyproject.toml
.github/workflows/: python-package.yml
docs/: anki_connect.json.md  anki_connect.python.md
tools/: anki_connect.python.md  header.json.md  header.python.md  make_api.py  make_doc.py  make_docs.py  markdown_parser.py  requirements.txt  source.md
